--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ div.a {
 
 
 <div class="w3-right w3-hide-Xlarge">
-<a href="Index.html" class="w3-bar-item w3-button w3-hover-blue">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-hover-blue">Home</a>
 <a href="about.html" class="w3-bar-item w3-button w3-hover-blue">About Me</a>
 <a href="services.html" class="w3-bar-item w3-button w3-hover-blue">Services</a>
 <a href="pricing.html" class="w3-bar-item w3-button w3-hover-blue">Pricing</a>
