--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h1 {
 
 
 <div class="w3-right w3-hide-Xlarge">
-<a href="Index.html" class="w3-bar-item w3-button w3-hover-blue">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-hover-blue">Home</a>
 <a href="about.html" class="w3-bar-item w3-button w3-hover-blue">About Me</a>
 <a href="services.html" class="w3-bar-item w3-button w3-hover-blue">Services</a>
 <a href="pricing.html" class="w3-bar-item w3-button w3-hover-blue">Pricing</a>
