--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@ float: left;
 
 .img2 {
 max-width: 100%;
-height:600px;
+height:auto;
 align:left;
 border-radius: 50%;
 }
@@ -97,8 +97,7 @@ header {
   Your browser does not support the video tag.
 </video>
 
-<image src=image/vapic.jpg alt="Virtual assistant" class="img2" width="40%"
- height="10%">
+<image src=image/vapic.jpg alt="laptop, glasses,keyboard on a desk" class="img2" >
 
 <br><br><br><br>
  <div class="w3-container w3-blue">
@@ -144,7 +143,7 @@ h1 {
 }
 
 </style>
-<p><image src=image/photo.jpg alt="My Photo" class="img2" style="width:170px;height:170px;margin-left:15px;">
+<p><image src=image/photo.jpg alt="My Photo" class="img2" style="width:180px;height:180px;margin-left:15px;">
   
  
   <p>Calendar management and appointment scheduling</p>
