--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@ header {
   <p style="color:black"; align="center">  Email:frances_romero@yahoo.com</p>
   <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p>  
         <a href="https://call.whatsapp.com/voice/9dlX3LrUZyOcgRwDHotJ0T" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://tochat.be/click-to-chat-directory/css/whatsapp.svg') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
-          <p align="center"><a href="https://calendly.com/frances-romero64/30min" class="w3-btn w3-black"> My Calendar</a></p>
+          <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
      <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
 </div>
 
