--- a/services.html
+++ b/services.html
@@ -188,7 +188,7 @@ h1 {
   <p style="color:black"; align="center">  Email: frances_romero@yahoo.com</p> 
   <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p> 
         <p align="center"><a href="https://wa.me/18684655234" class="w3-btn w3-black"> Whatsapp</a></p>
-        <p align="center"><a href="https://calendly.com/frances-romero64/30min" class="w3-btn w3-black"> My Calendar</a></p>
+        <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
           
      <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
 </div>
