--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@ h1 {
 </div>
 
 <header>
-<p align="center"><a href="https://calendly.com/frances-romero64/30min" div class="my-cta-button">Let's Chat!</div></a></p>
+<p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" div class="my-cta-button">Let's Chat!</div></a></p>
 
 
 <footer>
