--- a/services.html
+++ b/services.html
@@ -176,7 +176,7 @@ h1 {
 
 <header>
 
-<p align="center"><a href="https://calendly.com/frances-romero64/30min" div class="my-cta-button">Schedule time with me</div></a></p>
+<p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black" div class="my-cta-button">Schedule time with me</div></a></p>
 
 <footer>
 
