--- a/about.html
+++ b/about.html
@@ -234,10 +234,10 @@ h1 {
 
 <footer>
 <div class="w3-container w3-blue">
-  <p style="color:black"; align="center"><a href="tel:+18684655234">+1 868 465 5234</a></p> 
-  <p style="color:black"; align="center">  Email: frances_romero@yahoo.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p>  
-        <p align="center"><a href="https://wa.me/18684655234" class="w3-btn w3-black"> Whatsapp</a></p>
+  <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
+  <p style="color:black"; align="center">  Email: frances.romero64@gmail.com</p>
+  <p style="color:black"; align="center"><a href="mailto:frances.romero64@gmail.com">Send email</a></p>  
+        <p align="center"><a href="https://wa.me/19055364659" class="w3-btn w3-black"> Whatsapp</a></p>
           <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
      <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
 </div>
