--- a/contact.html
+++ b/contact.html
@@ -178,8 +178,8 @@ function topFunction() {
 <footer>
 <div class="w3-container w3-blue">
     
-  <p style="color:black"; align="center">  Email:frances_romero@yahoo.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p>  
+  <p style="color:black"; align="center">  Email:frances.romero64@gmail.com</p>
+  <p style="color:black"; align="center"><a href="mailto:frances.romero64@gmail.com">Send email</a></p>  
         <a href="https://call.whatsapp.com/voice/9dlX3LrUZyOcgRwDHotJ0T" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://tochat.be/click-to-chat-directory/css/whatsapp.svg') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
           <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
      <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
