--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -260,11 +261,11 @@ Your browser does not support the audio element.
 <footer>
 <div class="w3-container w3-blue">
 
-  <p style="color:black"; align="center"><a href="tel:+18684655234">+1 868 465 5234</a></p> 
-  <p style="color:black"; align="center">  Email: frances_romero@yahoo.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p>  
+  <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
+  <p style="color:black"; align="center">  Email: frances.romero64@gmail.com</p>
+  <p style="color:black"; align="center"><a href="mailto:frances.romero64@gmail.com">Send email</a></p>  
         
-<a href="https://wa.me/18684655234" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://wa.me/18684655234') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
+<a href="https://wa.me/19055364659" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://wa.me/18684655234') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
 
 <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
 </footer>
