--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@ function topFunction() {
   <br><br><br><br><br>
 
   <h1><b><i> Frances Virtual Solutions</i><b></h1>
-    <p><b><i> Simplyfying your World, one Task at a time</i><b></p> 
+    <p><b><i> Simplifying your World, one Task at a time</i><b></p> 
 
 <image src=image/VA2.jpeg alt="Virtual assistant"  width="30%"
  height="10%">
