--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    #grad1 {
   height: 200px;
   background-color: lightblue; /* For browsers that do not support gradients */
-  background-image: linear-gradient(blue, lightblue);
+  
 }
 
  
@@ -204,7 +204,7 @@ function topFunction() {
 
 <body>
 
- <audio controls autoplay>
+ <audio controls>
   <source src="welcome.ogg" type="audio/ogg">
   <source src="welcome.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
@@ -240,7 +240,7 @@ Your browser does not support the audio element.
 
 <body>
    
-
+<br><br><br><br>
 
 </style>
 <div class="a">
