--- a/about.html
+++ b/about.html
@@ -187,25 +187,25 @@ h1 {
   <image src=image/photo.jpg alt="My Photo"  width="10%" style="width:200px;height:2
   00px;margin-left:15px;">
 
-  <p> Frances Romero </p>
+  
   
 
   </div>
 
   <div class="a">
 
- <p>Hello,</p>
- <p>My name is Frances and I am a highly energized, versatile and detail-oreinted virtual assistant, with more than twenty (20) years experience in the service industry.</p>
- <p>As a virtual assistant, I help small business owners and entrepreneurs with the administrative areas of their business.</p>
- <p>To me it is very rewarding because it's a win-win situation!</p>
- <p> I get to handle work I thoroughly enjoy, organizing details and "figuring out" problems to my heart's content.</p>
- <p> In turn, my clients get to spend their time doing the work that they really enjoy.</p> 
-<p> My background in managing calenders, emails and other administrative tasks help improve efficiency and productivity in my clients' business.</p>
- <p>I delight in giving my clients back time to focus on what truly matters to them - making their business flourish and or spending time with their family and friends.</p> 
+ 
+ <p align="left"><a>Hello,</a></p>
+ <p align="left"><a> My name is Frances Romero and I am a highly energized, versatile and detail-oreinted virtual assistant, with more than twenty (20) years experience in the service industry.</a></p>
+ <p align="left"><a> As a virtual assistant, I help small business owners and entrepreneurs with the administrative areas of their business.</a></p>
+ <p align="left"><a>To me it is very rewarding because it's a win-win situation! I get to handle work I thoroughly enjoy, organizing details and "figuring out" problems to my heart's content.</a></p>
+ <p align="left"><a> In turn, my clients get to spend their time doing the work that they really enjoy.</a></p> 
+ <p align="left"><a> My background in managing calenders, emails and other administrative tasks help improve efficiency and productivity in my clients' business.</a></p>
+ <p align="left"><a> I delight in giving my clients back time to focus on what truly matters to them - making their business flourish and or spending time with their family and friends.</a></p> 
 
- <p>When I am not working, you can find me either on the beach or discovering new hiking trails.</p>
+ <p align="left"><a> When I am not working, you can find me either on the beach or discovering new hiking trails.</a></p>
  <br>
- <p>Let's get together and chat about how I can also help you free up your time.</p>
+ <p align="left"><a> Let's get together and chat about how I can also help you free up your time.</a></p>
 
 <div>
 
