--- a/services.html
+++ b/services.html
@@ -197,19 +197,40 @@ h1 {
   left: 16px;
 }
 
+<style>
+
+.container {
+text-align: center;
+}
+ .centered-list {
+display: inline-block;
+text-align: left;
+}
 </style>
-<p><image src=image/photo.jpg alt="My Photo" class="img2" style="width:180px;height:180px;margin-left:15px;">
+<title>Center Bullet Points</title>
+</head>
+<body>
+<div class="container">
+<ul class="centered-list">
   
+
+ <ul align="center" style="list-style:none ">
+
+  <li align="left"> Calendar management and appointment scheduling </li>
+  <li align="left"> Set up automated appointment scheduling software and link to email signature and or website, if desired</li>
+  <li align="left"> Email inbox clean up, organization and management</li>
+  <li align="left"> Proofread documents, emails and websites</li> 
+  <li align="left"> Create detailed itineraries for travel</li>
+  <li align="left"> Source quotation for projects</li> 
+  <li align="left"> Data Entry and Cold calling</li>
+  <li align="left"> Format and publish email newsletters</li>
+  <li align="left"> Password management<li>
+  <li align="left"> Research new applications when a change is needed<li>   
+
+
+</ul>
  
-  <p>Calendar management and appointment scheduling</p>
- <p>Set up automated appointment scheduling software and link to email signature and or website, if desired</p>
- <p>Email inbox clean up, organization and management</p>
- <p>Proofread documents, emails and websites</p> 
-<p>Create detailed itineraries for travel</p>
- <p>Source quotation for projects</p> 
- <p>Data Entry and Cold calling</p>
- <p>Format and publish email newsletters</p>
- <b><b><b>
+<body>
 
 <div>
   <style>
