--- a/pricing.html
+++ b/pricing.html
@@ -141,9 +141,9 @@ function topFunction() {
 
 
 <p> I have a simple, delightful and easy approach to pricing:</p>
-	<p>$250.00 an hour for my services - available in 10-hour blocks</p>		
-	<p>$300.00 an hour for my services - available in 5-hour blocks</p>
-	<p>$100.00 an hour for hours booked individually</p>
+	<p>$60.00 an hour for my services - available in 10-hour blocks</p>		
+	<p>$120.00 an hour for my services - available in 5-hour blocks</p>
+	<p>$500.00 an hour for hours booked individually</p>
 	<p>In all cases I offer these as "Frances Virtual Solutions Debit Card"</p>
 	<p>You buy the quantity you want upfront and use it at whatever pace you want and for whatever services or combination of services you like</p>
 	<p>Each "block" is valid for one (1) year</p>
@@ -189,12 +189,12 @@ div class="my-cta-button"><a href="https://buy.stripe.com/8wMcOoa6mdET5Ww289">Pu
 <footer>
 <div class="w3-container w3-blue">
   <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
-  <p style="color:black"; align="center">  Email: frances.romero64@gmail.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances_romero@yahoo.com">Send email</a></p>  
+  <p style="color:black"; align="center">  Email: frances@francesfvs.com</p>
+  <p style="color:black"; align="center"><a href="mailto:frances@francesfvs.com">Send email</a></p>  
   <p align="center"><a href="https://wa.me/19055364659" class="w3-btn w3-black"> Whatsapp</a></p>
   <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
      
-     <p style="color:black"; align="right">© 2024 Frances Virtual Solutions -All Rights Reserved</p>
+     <p style="color:black"; align="right">© 2025 Frances Virtual Solutions -All Rights Reserved</p>
 </div>
 
 </footer>
