--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@ h1 {
 <footer>
 <div class="w3-container w3-blue">
   <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
-  <p style="color:black"; align="center">  Email: frances@francesvs.com.com</p>
+  <p style="color:black"; align="center">  Email: frances@francesvs.com</p>
   <p style="color:black"; align="center"><a href="mailto:frances@francesvs.com">Send email</a></p>  
         <p align="center"><a href="https://wa.me/19055364659" class="w3-btn w3-black"> Whatsapp</a></p>
           <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
