--- a/pricing.html
+++ b/pricing.html
@@ -189,8 +189,8 @@ div class="my-cta-button"><a href="https://buy.stripe.com/8wMcOoa6mdET5Ww289">Pu
 <footer>
 <div class="w3-container w3-blue">
   <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
-  <p style="color:black"; align="center">  Email: frances@francesfvs.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances@francesfvs.com">Send email</a></p>  
+  <p style="color:black"; align="center">  Email: frances@francesvs.com</p>
+  <p style="color:black"; align="center"><a href="mailto:frances@francesvs.com">Send email</a></p>  
   <p align="center"><a href="https://wa.me/19055364659" class="w3-btn w3-black"> Whatsapp</a></p>
   <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
      
