--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@ function topFunction() {
 <footer>
 <div class="w3-container w3-blue">
     
-  <p style="color:black"; align="center">  Email:frances@francesvs.com </p>
+  <p style="color:black"; align="center">  Email:focusfran2@gmail.com </p>
  
   <a href="https://call.whatsapp.com/voice/9dlX3LrUZyOcgRwDHotJ0T" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://tochat.be/click-to-chat-directory/css/whatsapp.svg') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
           <p align="center"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" class="w3-btn w3-black"> My Calendar</a></p>
