--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@ Your browser does not support the audio element.
 <div class="w3-container w3-blue">
 
   <p style="color:black"; align="center"><a href="tel:+19055364659">+1 905 536 4659</a></p> 
-  <p style="color:black"; align="center">  Email: frances@francesvs.com</p>
-  <p style="color:black"; align="center"><a href="mailto:frances@francesvs.com">Send email</a></p>  
+  <p style="color:black"; align="center">  Email: focusfran2@gmail.com</p>
+  <p style="color:black"; align="center"><a href="mailto:focusfran2@gmail.com">Send email</a></p>  
         
 <a href="https://wa.me/19055364659" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #ffffff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #0000ff url('https://wa.me/18684655234') no-repeat 1.5em center; background-size: 1.6em;">Contact on WhatsApp</a>
 
